--- a/Internal_Recruitment_System/.classpath
+++ b/Internal_Recruitment_System/.classpath
@@ -2,11 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="D:/150662/JAR files/module 2 JAR files/classes12.jar"/>
-	<classpathentry kind="lib" path="D:/150662/JAR files/module 2 JAR files/junit-4.6.jar"/>
-	<classpathentry kind="lib" path="D:/150662/JAR files/module 2 JAR files/log4j-1.2.9.jar"/>
-	<classpathentry kind="lib" path="D:/150662/JAR files/module 2 JAR files/ojdbc14.jar"/>
-	<classpathentry kind="lib" path="D:/NOt Mine/Users/sasakhar/Downloads/consoletable.jar"/>
 	<classpathentry kind="lib" path="lib/consoletable.jar"/>
+	<classpathentry kind="lib" path="lib/classes12.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.6.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.9.jar"/>
+	<classpathentry kind="lib" path="lib/ojdbc14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
